2008-10-19  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/37723
        * gfortran.dg/dependency_22.f90: New test.

2008-10-19  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/37787
        * gfortran.dg/module_equivalence_5.f90: New test.

2008-10-17  Andrew MacLeod  <amacleod@redhat.com>

	PR tree-optimization/37102
	* gcc.c-torture/execute/pr37102.c: New Test.

2008-10-11  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37794
	* gfortran.dg/used_types_24.f90: New test.

2008-10-11  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/35680
	* gfortran.dg/transfer_array_intrinsic_5.f90: New test.

2008-10-08  Simon Martin  <simartin@users.sourceforge.net>

	PR c/35437
	* gcc.dg/struct-parse-2.c: New test.
	* g++.dg/parse/struct-4.C: New test.

2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/37731
	* gcc.dg/torture/pr37731-1.c: New.
	* gcc.dg/torture/pr37731-2.c: Likewise.

2008-10-07  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_optimization4.adb: New test.
	* gnat.dg/loop_optimization4_pkg.ad[sb]: New helper.

2008-10-06  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/unchecked_convert2.adb: New test.

2008-10-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37706
	* gfortran.dg/module_equivalence_4.f90: New test.

2008-09-30  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/37555
	* g++.dg/parse/error32.C: New test.

2008-09-28  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/conv_decimal.adb: New test.

2008-09-26  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37580
	* gfortran.dg/pointer_assign_5.f90: New test.
	* gfortran.dg/pointer_assign_6.f90: New test.

2008-09-26  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37504
	* gfortran.dg/protected_7.f90: New test.

2008-09-25  Jakub Jelinek  <jakub@redhat.com>

	PR c/37645
	* gcc.dg/pr37645.c: New test.

2008-09-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37626